--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,4 +1,8 @@
 jdbc.url="jdbc:mysql://localhost:3306/spark-1"
 jdbc.tablName="procity"
 jdbc.user=root
-jdbc.password="123456"
+jdbc.password="root"
+
+##Hbase
+HBASE.Host="node1:2181"//这个是单机版的   如果是集群，会有三个哦
+HBASE.tableName="gp23"
